--- a/app/src/main/res/layout/activity_browse_items.xml
+++ b/app/src/main/res/layout/activity_browse_items.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/browse_items_view">
 
 
     <ProgressBar
