--- a/app/src/main/res/layout/activity_browse_items.xml
+++ b/app/src/main/res/layout/activity_browse_items.xml
@@ -1,23 +1,47 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/browse_items_view">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="com.hhsfbla.launch.BrowseItemsActivity">
 
-
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar4"
-        android:layout_marginTop="30dp" />
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    <android.support.v7.widget.RecyclerView
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/browse_items_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:title="Browse Fundraiser Items" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/browse_items"
-        android:layout_gravity="center"
-        android:background="?android:attr/colorBackground" />
+        android:id="@+id/browse_items_view">
 
-</FrameLayout>
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar4"
+            android:layout_marginTop="86dp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/browse_items_recycler"
+            android:layout_gravity="center"
+            android:background="?android:attr/colorBackground" />
+
+    </FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
