--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -1,168 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:fitsSystemWindows="true"
+    tools:context="com.hhsfbla.launch.ItemActivity">
 
-
-    <ScrollView
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-        <LinearLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/item_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-            <ImageView
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="110dp"
-                app:srcCompat="@drawable/image_placeholder"
-                android:id="@+id/item_picture" />
+    </android.support.design.widget.AppBarLayout>
+
+    <RelativeLayout
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:weightSum="1">
+
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp">
+                android:orientation="vertical" >
 
-
-                <TextView
-                    android:text="Item Name"
+                <ImageView
+                    xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/item_name"
-                    android:textSize="30dp"
-                    android:layout_marginBottom="10dp"/>
-
-                <TextView
-                    android:text="Price"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/item_price"
-                    android:textSize="20dp"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_height="110dp"
+                    app:srcCompat="@drawable/image_placeholder"
+                    android:id="@+id/item_picture" />
 
                 <LinearLayout
-                    android:orientation="horizontal"
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="10dp">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp">
 
 
                     <TextView
-                        android:text="Condition:"
-                        android:layout_width="wrap_content"
+                        android:text="Item Name"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="20dp"/>
+                        android:id="@+id/item_name"
+                        android:textSize="30dp"
+                        android:layout_marginBottom="10dp"/>
+
+                    <TextView
+                        android:text="Price"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/item_price"
+                        android:textSize="20dp"
+                        android:layout_marginBottom="10dp"/>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp">
+
+
+                        <TextView
+                            android:text="Condition:"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="20dp"/>
+
+                        <Button
+                            android:text="Condition"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/item_condition"
+                            android:clickable="false"
+                            android:layout_marginLeft="15dp"/>
+
+                    </LinearLayout>
+
+                    <TextView
+                        android:text="Description"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/item_description"
+                        android:textSize="15dp"
+                        android:layout_marginBottom="15dp"/>
 
                     <Button
-                        android:text="Condition"
-                        android:layout_width="wrap_content"
+                        android:text="Buy"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/item_condition"
-                        android:clickable="false"
-                        android:layout_marginLeft="15dp"/>
+                        android:id="@+id/item_buy"
+                        android:textSize="15dp"
+                        style="@style/Widget.AppCompat.Button.Colored" />
 
                 </LinearLayout>
 
-                <TextView
-                    android:text="Description"
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/item_description"
-                    android:textSize="15dp"
-                    android:layout_marginBottom="15dp"/>
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp">
 
-                <Button
-                    android:text="Buy"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/item_buy"
-                    android:textSize="15dp"
-                    style="@style/Widget.AppCompat.Button.Colored" />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp">
-
-                <TextView
-                    android:text="About the Seller and Campaign"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="20dp"
-                    android:gravity="center"
-                    android:textAlignment="viewStart"
-                    android:layout_marginBottom="10dp" />
-
-                <android.support.v7.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                        <TextView
-                            android:text="By buying this item, you contribute to: "
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="15dp"
-                            android:gravity="center"
-                            android:layout_weight="1" />
-
-                        <TextView
-                        android:text="Fundraiser Name"
+                    <TextView
+                        android:text="About the Seller and Campaign"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/item_fundraiser_name"
-                        android:layout_marginTop="15dp"
+                        android:textSize="20dp"
                         android:gravity="center"
-                        android:textSize="15dp"
-                        android:layout_weight="1" />
+                        android:textAlignment="viewStart"
+                        android:layout_marginBottom="10dp" />
+
+                    <android.support.v7.widget.CardView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" >
 
                         <LinearLayout
-                            android:orientation="horizontal"
+                            android:orientation="vertical"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginTop="15dp">
-
-
-                            <ImageView
-                                android:layout_width="75dp"
-                                android:layout_height="75dp"
-                                app:srcCompat="@drawable/image_placeholder"
-                                android:id="@+id/item_seller_picture"
-                                android:layout_marginLeft="30dp"/>
+                            android:layout_height="match_parent">
 
                             <TextView
-                                android:text="Seller Name"
-                                android:layout_width="wrap_content"
+                                android:text="By buying this item, you contribute to: "
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:id="@+id/item_seller_name"
-                                android:layout_gravity="center_vertical"
-                                android:textSize="15dp"
-                                android:layout_marginLeft="20dp"/>
+                                android:layout_marginTop="15dp"
+                                android:gravity="center"
+                                android:layout_weight="1" />
 
+                            <TextView
+                            android:text="Fundraiser Name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/item_fundraiser_name"
+                            android:layout_marginTop="15dp"
+                            android:gravity="center"
+                            android:textSize="15dp"
+                            android:layout_weight="1" />
+
+                            <LinearLayout
+                                android:orientation="horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:layout_marginTop="15dp">
+
+
+                                <ImageView
+                                    android:layout_width="75dp"
+                                    android:layout_height="75dp"
+                                    app:srcCompat="@drawable/image_placeholder"
+                                    android:id="@+id/item_seller_picture"
+                                    android:layout_marginLeft="30dp"/>
+
+                                <TextView
+                                    android:text="Seller Name"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:id="@+id/item_seller_name"
+                                    android:layout_gravity="center_vertical"
+                                    android:textSize="15dp"
+                                    android:layout_marginLeft="20dp"/>
+
+                            </LinearLayout>
                         </LinearLayout>
-                    </LinearLayout>
-                </android.support.v7.widget.CardView>
+                    </android.support.v7.widget.CardView>
+
+                </LinearLayout>
 
             </LinearLayout>
-
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+        </ScrollView>
+    </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
