--- a/app/src/main/res/layout/content_buy_item.xml
+++ b/app/src/main/res/layout/content_buy_item.xml
@@ -1,106 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_buy_item"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.hhsfbla.launch.BuyItemActivity"
     tools:showIn="@layout/activity_buy_item">
-    <Button
-        android:text="Enter Payment Info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp"
-        android:id="@+id/buy_item_proceed_button"
-        android:layout_alignParentEnd="true"
-        style="@style/Widget.AppCompat.Button.Colored" />
 
-    <EditText
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/editText"
-        android:hint="Full Name"
-        android:elevation="1dp"
-        android:background="@drawable/edittext_style"
-        android:padding="15dp" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPostalAddress"
-        android:ems="10"
-        android:layout_below="@+id/editText"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:id="@+id/editText2"
-        android:layout_alignParentEnd="true"
-        android:hint="Street Address"
-        android:background="@drawable/edittext_style"
-        android:padding="15dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_below="@+id/editText3"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:id="@+id/editText4"
-        android:inputType="text"
-        android:hint="City"
-        android:background="@drawable/edittext_style"
-        android:padding="15dp" />
+            <TextView
+                android:text="Order Confirmation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView200"
+                android:textSize="22sp" />
+
+            <TextView
+                android:text="You're buying:"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView15" />
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="12dp">
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="1">
+
+                    <ImageView
+                        android:layout_width="64dp"
+                        android:layout_height="65dp"
+                        app:srcCompat="@drawable/image_placeholder"
+                        android:id="@+id/imageView3"
+                        android:layout_margin="10dp" />
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:layout_width="259dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.87"
+                        android:gravity="center_vertical"
+                        android:layout_marginLeft="10dp">
+
+                        <TextView
+                            android:text="Item Name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView14"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+                        <TextView
+                            android:text="$price"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/textView16"
+                            android:textSize="20sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+            </android.support.v7.widget.CardView>
+
+            <TextView
+                android:text="Shipping Info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView17"
+                android:textSize="22sp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/editText"
+                android:hint="Full Name"
+                android:elevation="1dp"
+                android:background="@drawable/edittext_style"
+                android:padding="15dp"
+                android:layout_marginTop="15dp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPostalAddress"
+                android:ems="10"
+                android:layout_below="@+id/editText"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="12dp"
+                android:id="@+id/editText2"
+                android:layout_alignParentEnd="true"
+                android:hint="Street Address"
+                android:background="@drawable/edittext_style"
+                android:padding="15dp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPostalAddress"
+                android:ems="10"
+                android:layout_marginTop="12dp"
+                android:id="@+id/editText3"
+                android:hint="Address Line 2 (optional)"
+                android:background="@drawable/edittext_style"
+                android:padding="15dp"
+                android:layout_below="@+id/editText2"
+                android:layout_alignParentStart="true" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_below="@+id/editText3"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="12dp"
+                android:id="@+id/editText4"
+                android:inputType="text"
+                android:hint="City"
+                android:background="@drawable/edittext_style"
+                android:padding="15dp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:ems="10"
+                android:layout_below="@+id/editText4"
+                android:layout_alignEnd="@+id/editText4"
+                android:layout_marginTop="12dp"
+                android:id="@+id/editText5"
+                android:hint="State"
+                android:background="@drawable/edittext_style"
+                android:padding="15dp" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:layout_below="@+id/editText5"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="12dp"
+                android:id="@+id/editText6"
+                android:inputType="number"
+                android:hint="Postal Code"
+                android:background="@drawable/edittext_style"
+                android:padding="15dp" />
+
+            <Button
+                android:text="Enter Payment Info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:id="@+id/buy_item_proceed_button"
+                android:layout_alignParentEnd="true"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_marginTop="20dp" />
+
+        </LinearLayout>
+    </ScrollView>
 
     <!--TODO: change to selection box -->
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:ems="10"
-        android:layout_below="@+id/editText4"
-        android:layout_alignEnd="@+id/editText4"
-        android:layout_marginTop="20dp"
-        android:id="@+id/editText5"
-        android:hint="State"
-        android:background="@drawable/edittext_style"
-        android:padding="15dp" />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:layout_below="@+id/editText5"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp"
-        android:id="@+id/editText6"
-        android:inputType="number"
-        android:hint="Postal Code"
-        android:background="@drawable/edittext_style"
-        android:padding="15dp" />
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPostalAddress"
-        android:ems="10"
-        android:layout_marginTop="20dp"
-        android:id="@+id/editText3"
-        android:hint="Address Line 2 (optional)"
-        android:background="@drawable/edittext_style"
-        android:padding="15dp"
-        android:layout_below="@+id/editText2"
-        android:layout_alignParentStart="true" />
-
-</RelativeLayout>
+</LinearLayout>
