--- a/app/src/main/res/layout/fragment_fundraiser.xml
+++ b/app/src/main/res/layout/fragment_fundraiser.xml
@@ -96,7 +96,8 @@
                         app:rcProgressColor="#3498db"
                         app:rcBackgroundColor="#eeeeee"
                         android:layout_height="16dp"
-                        android:layout_marginTop="2dp" />
+                        android:layout_marginTop="2dp"
+                        android:id="@+id/fundraiser_progressbar" />
 
                     <TextView
                         android:text="20 days left"
