--- a/app/src/main/res/layout/content_create_fundraiser.xml
+++ b/app/src/main/res/layout/content_create_fundraiser.xml
@@ -70,7 +70,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
+        android:inputType="number"
         android:ems="10"
         android:layout_below="@+id/textView4"
         android:layout_alignParentStart="true"
