--- a/app/src/main/res/layout/fragment_browse_fundraisers.xml
+++ b/app/src/main/res/layout/fragment_browse_fundraisers.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar2"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="30dp"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
