--- a/app/src/main/res/layout/user_account_view_page.xml
+++ b/app/src/main/res/layout/user_account_view_page.xml
@@ -81,4 +81,13 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         style="@style/Widget.AppCompat.Button.Colored" />
+    <Button
+        android:text="Sign Out"
+        android:layout_width="164dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/sign_out_button"
+        android:textColor="#ffffff"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        style="@style/Widget.AppCompat.Button.Colored" />
 </LinearLayout>
